--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY database/ /app/database/
 COPY files/ /app/files/
-COPY templates/ /app/templates
+COPY templates/ /app/templates/
 COPY requirements.txt .env  config_reader.py create_db.py YaDisk.py main.py states.py db.env ./
 EXPOSE 8000
 
