--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,9 +1,13 @@
 FROM python:3.12-slim
 
 WORKDIR /app
-COPY database/ /app/database/
-COPY requirements.txt db.env admin_panel.py ./
+
+COPY admin_panel/ /app/admin_panel
+COPY main/ /app/main
+COPY manage.py requirements.txt ./
+
 EXPOSE 5000
 
 RUN pip install --no-cache-dir -r requirements.txt
-CMD python admin_panel.py
+
+CMD python manage.py runserver 0.0.0.0:5000
