--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -3,6 +3,7 @@ aioredis==2.0.1
 aiosqlite==0.17.0
 annotated-types==0.7.0
 anyio==4.4.0
+asgiref==3.8.1
 async-timeout==4.0.3
 Babel==2.15.0
 bcrypt==4.1.3
@@ -13,16 +14,13 @@ click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.2.0
-fastapi-cli==0.0.4
-Flask==3.0.3
-Flask-Admin==1.6.1
-Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+install==1.3.5
 iso8601==1.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -49,6 +47,7 @@ shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
+sqlparse==0.5.1
 starlette==0.37.2
 time-machine==2.14.2
 typer==0.12.3
