--- a/main/db.env
+++ b/main/db.env
@@ -1,5 +1,5 @@
-DB_HOST=db
+DB_HOST=147.45.107.28
 DB_PORT=5432
-DB_USER=postgres
-DB_PASS=admin
-DB_NAME=whatsapp
+DB_USER=gen_user
+DB_PASS=L(/y\&{P9aHL(G
+DB_NAME=default_db
