--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -4,9 +4,9 @@ WORKDIR /app
 
 COPY database/ /app/database/
 COPY files/ /app/files/
-COPY requirements.txt .env  config_reader.py create_db.py YaDisk.py main.py states.py db.env ./
+COPY requirements.txt .env  config_reader.py create_db.py YaDisk.py main.py states.py db.env restarter.py script.pid ./
 EXPOSE 5000
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD python create_db.py && python main.py
+CMD python create_db.py && python restarter.py
