--- a/admin/requirements.txt
+++ b/admin/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.8.1
+diff-match-patch==20230430
 Django==5.0.7
+django-import-export==4.1.1
+et-xmlfile==1.1.0
+openpyxl==3.1.5
 psycopg2-binary==2.9.9
 sqlparse==0.5.1
+tablib==3.5.0
 tzdata==2024.1
-
+whitenoise==6.7.0
