--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY admin_panel/ /app/admin_panel
 COPY main/ /app/main
 COPY manage.py requirements.txt ./
-
+COPY templates/ /app/templates
 
 EXPOSE 8000
 
